--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+crossterm = "0.27.0"
+dialoguer = "0.11.0"
 serde = { version = "1.0.196", features = ["derive"]}
 serde_json = "1.0.112"
